2014-11-14 Marco Giammarini <m.giammarini@warcomeb.it>

    * Piccolo fix nella funzione getEmployeeByLogin che restituiva un id non vero.

2014-11-07 Marco Giammarini <m.giammarini@warcomeb.it>

    * Ultimata l'implementazione della classe ActivityNote.

2014-10-29 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la selezione dell'intera riga e la disabilitazione alle modifiche sulle tabelle nella main window.

    * Aggiunta la parte grafica per la visualizzazione delle note nell'activitydialog.

2014-10-23 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la disabilitazione di alcune funzionalita' in base ai privilegi degli utenti.

2014-10-23 Marco Giammarini <m.giammarini@warcomeb.it>

    * Ultimata la gestione del login, anche se ancora l'utente loggato non viene salvato  nel sistema.

2014-10-20 Marco Giammarini <m.giammarini@warcomeb.it>

    * Implementato il controllo controlData() della classe LoginDialog.

2014-10-16 Marco Giammarini <m.giammarini@warcomeb.it>

    * Iniziata l'implementazione del login, aggiungendo anche la classe LoginController

2014-10-15 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunto il dialog per il login e quindi la classe LoginDialog.

2014-10-14 Marco Giammarini <m.giammarini@warcomeb.it>

    * Completata la funzione updateActivity() della classe ActivityDatabase.

2014-10-13 Marco Giammarini <m.giammarini@warcomeb.it>

    * Completata la visualizzazione del nome del tecnico designato nella tabella delle attivita'.

2014-10-08 Marco Giammarini <m.giammarini@warcomeb.it>

    * Completata la funzione fillActivityFields() in ActivityDialog.

2014-10-07 Marco Giammarini <m.giammarini@warcomeb.it>

    * Completata la funzione getActivity() in ActivityDatabase.

2014-10-06 Marco Giammarini <m.giammarini@warcomeb.it>

    * Completata la funzione di ricerca all'interno del database delle varie attivita'.
