@@ -2,6 +2,8 @@
 
     * Piccolo fix nella funzione getEmployeeByLogin che restituiva un id non vero.
 
+    * Aggiunta la finestra di dialog per visualizzare una nota. Per ora solo in versione Add.
+
 2014-11-07 Marco Giammarini <m.giammarini@warcomeb.it>
 
     * Ultimata l'implementazione della classe ActivityNote.
